infrastructure/k8s/local/admins-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admins-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admins
  template:
    metadata:
      labels:
        app: admins
    spec:
      containers:
      - name: admins
        image: admins
        imagePullPolicy: Never
---

apiVersion: v1
kind: Service
metadata:
  name: admins-srv
spec:
  selector:
    app: admins
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
