infrastructure/k8s/local/admins-mondo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admins-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admins-db
  template:
    metadata:
      labels:
        app: admins-db
    spec:
      containers:
      - name: admins-db
        image: mongo

---

apiVersion: v1
kind: Service
metadata:
  name: admins-mongo-srv
spec:
  selector:
    app: admins-db
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
