infrastructure/k8s/local/mailer-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailer-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailer
  template:
    metadata:
      labels:
        app: mailer
    spec:
      containers:
      - name: mailer
        image: mailer
        imagePullPolicy: Never
---

apiVersion: v1
kind: Service
metadata:
  name: mailer-srv
spec:
  selector:
    app: mailer
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
