infrastructure/k8s/local/survey-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: survey-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: survey
  template:
    metadata:
      labels:
        app: survey
    spec:
      containers:
      - name: survey
        image: survey
        imagePullPolicy: Never
---

apiVersion: v1
kind: Service
metadata:
  name: survey-srv
spec:
  selector:
    app: users
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
