infrastructure/k8s/local/survey-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: survey-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: survey-db
  template:
    metadata:
      labels:
        app: survey-db
    spec:
      containers:
      - name: survey-db
        image: mongo

---

apiVersion: v1
kind: Service
metadata:
  name: survey-mongo-srv
spec:
  selector:
    app: survey-db
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
