infrastructure/k8s/local/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: survey.dev
      http:
        paths:
          - path: /api/organizations/?(.*)
            pathType: Prefix
            backend:
              service:
                name: organizations-srv
                port:
                  number: 3000
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: users-srv
                port:
                  number: 3000
          - path: /api/admins/?(.*)
            pathType: Prefix
            backend:
              service:
                name: admins-srv
                port:
                  number: 3000
